# gameopengl1

./: CMakeLists.txt
src/: main.c
